--- a/CONTAGEM/index.html
+++ b/CONTAGEM/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Termonuclear Bomb</title>
 
 </head>
@@ -11,7 +12,7 @@
     <section class="Conteudoprincipal"> 
         <h1 class="tituloprincipal">Objetivos de Vida</h1>
         <div class="botoes">
-            <button class="botao">
+            <button class="botao" >
                 Enem 1000
             </button>
             <button class="botao">
@@ -29,3 +30,4 @@
     
 </body>
 </html>
+
