--- a/CONTAGEM/index.html
+++ b/CONTAGEM/index.html
@@ -12,17 +12,17 @@
     <section class="Conteudoprincipal"> 
         <h1 class="tituloprincipal">Objetivos de Vida</h1>
         <div class="botoes">
-            <button class="botao" >
+            <button class="botao ativo" >
                 Enem 1000
             </button>
             <button class="botao">
-                Salamada
-             </button>
+                Progeto: 1113
+            </button>
             <button class="botao">
                 Cachaçada
             </button>
             <button class="botao">
-                Re-públicação
+                REpública
             </button>
 
         </div>
