--- a/CONTAGEM/index.html
+++ b/CONTAGEM/index.html
@@ -16,7 +16,7 @@
                 Enem 1000
             </button>
             <button class="botao">
-                Progeto: 1113
+                Projeto: 1113
             </button>
             <button class="botao">
                 Cachaçada
@@ -26,8 +26,26 @@
             </button>
 
         </div>
+        <div class="aba-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-coneudo-titulo-principal">Tirar 1000 no Enem</h3>
+                <h4 class="aba-coneudo-titulo-secundario">Estudar todos os dias no minimo 4h por dia para tirar 1000 no Enem  em pelo mesmo em uma área</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-coneudo-titulo-principal">Ter um caminhão 1113</h3>
+                <h4 class="aba-coneudo-titulo-secundario">Como um plano B, se tudor der errado é só puxar torra no Mato Grosso.</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-coneudo-titulo-principal">Fabricar 20.000 litros de Cachaça</h3>
+                <h4 class="aba-coneudo-titulo-secundario">Um litro de cachaça tem muitos usos, imagina o que da para fazer com VINTE MIL deles? (como, abastecer o 1113...)</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-coneudo-titulo-principal">Re-fundar o Brasil</h3>
+                <h4 class="aba-coneudo-titulo-secundario">A cerca de 200 anos cometeram o maior cagada das américas... Agora vamos concertar, solução vide "title" (nome da página) </h4>
+            </div>
+        </div> 
     </section>
-    
+   <script src="main.js"></script>
 </body>
 </html>
 
