--- a/CONTAGEM/index.html
+++ b/CONTAGEM/index.html
@@ -28,7 +28,7 @@
 
             </div>
             <div class="aba-textos">
-            <div class="aba-conteudo">
+            <div class="aba-conteudo ativo">
                 <h3 class="aba-coneudo-titulo-principal">Tirar 1000 no Enem</h3>
                 <h4 class="aba-coneudo-titulo-secundario">Estudar todos os dias no minimo 4h por dia para tirar 1000 no Enem  em pelo mesmo em uma área</h4>
             </div>
