--- a/CONTAGEM/index.html
+++ b/CONTAGEM/index.html
@@ -31,18 +31,22 @@
             <div class="aba-conteudo ativo">
                 <h3 class="aba-coneudo-titulo-principal">Tirar 1000 no Enem</h3>
                 <h4 class="aba-coneudo-titulo-secundario">Estudar todos os dias no minimo 4h por dia para tirar 1000 no Enem  em pelo mesmo em uma área</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-coneudo-titulo-principal">Ter um caminhão 1113 (e um Fusca)</h3>
-                <h4 class="aba-coneudo-titulo-secundario">Como um plano B, se tudor der errado é só puxar tora no Mato Grosso. E um fusca.</h4>
+                <h4 class="aba-coneudo-titulo-secundario">Como um plano B, se tudor der errado é só puxar tora no Mato Grosso. E um fusca (Porque sim).</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-coneudo-titulo-principal">Fabricar 20.000 litros de Cachaça</h3>
                 <h4 class="aba-coneudo-titulo-secundario">Um litro de cachaça tem muitos usos, imagina o que da para fazer com VINTE MIL deles? (como, abastecer o Fusca...)</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-coneudo-titulo-principal">Re-fundar o Brasil</h3>
                 <h4 class="aba-coneudo-titulo-secundario">A cerca de 200 anos cometeram o maior cagada das américas... Agora vamos concertar, solução vide "title" (nome da página) </h4>
+                <div class="contador"></div>
             </div>
             </div>
         </div> 
